# channel-sdk-rust

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: lark-api.md  messages.md  outbound-messages.md  roadmap.md
examples/: README.md  message_sender.rs  reply_text.rs  send_text.rs  tokens.rs  ws_connect.rs
src/: client.rs  config.rs  error.rs  lib.rs  openapi.rs
src/card/: mod.rs
src/event/: mod.rs
src/lark_openapi/: auth.rs  message.rs  mod.rs  response.rs  tests.rs  transport.rs  ws.rs
src/media/: mod.rs
src/message/: mod.rs  sender.rs
