[package]
name = "channel-sdk-rust"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Lark/Feishu Channel SDK for Rust"
repository = "https://github.com/jacoesad/channel-sdk-rust"
readme = "README.md"
keywords = ["lark", "feishu", "channel", "sdk", "bot"]
categories = ["api-bindings", "asynchronous"]

[lib]
name = "lark_channel"
path = "src/lib.rs"

[features]
default = ["reqwest-transport"]
reqwest-transport = ["dep:reqwest"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"

[dev-dependencies]
serde_json = "1"
