[package]
name = "lark-channel"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
authors = ["jacoesad <jacoesad@126.com>"]
description = "Lark/Feishu Channel SDK for Rust"
license = "MIT"
repository = "https://github.com/jacoesad/channel-sdk-rust"
documentation = "https://docs.rs/lark-channel"
readme = "README.md"
keywords = ["lark", "feishu", "channel", "sdk", "bot"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]

[lib]
name = "lark_channel"
path = "src/lib.rs"

[[example]]
name = "tokens"
required-features = ["reqwest-transport"]

[features]
default = ["reqwest-transport"]
reqwest-transport = ["dep:reqwest"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
